# trainingdata-tool

./: .gitignore  .gitmodules  CMakeLists.txt  Project.sln  README.md  appveyor.yml
.circleci/: config.yml
pgnlib/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  PGNCommentText.cpp  PGNCommentText.h  PGNException.cpp  PGNException.h  PGNGame.cpp  PGNGame.h  PGNGameCollection.cpp  PGNGameCollection.h  PGNGameResult.cpp  PGNGameResult.h  PGNMove.cpp  PGNMove.h  PGNMoveList.cpp  PGNMoveList.h  PGNParser.cpp  PGNParser.h  PGNPiece.cpp  PGNPiece.h  PGNPly.cpp  PGNPly.h  PGNPosition.cpp  PGNPosition.h  PGNSquare.cpp  PGNSquare.h  PGNTag.cpp  PGNTag.h  PGNTagList.cpp  PGNTagList.h  README  RELEASE_NOTES  bootstrap  configure  configure.in
pgnlib/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pgnlib/example_1/: Makefile  example_1.cpp
pgnlib/example_2/: Makefile  example_2.cpp  sample.pgn
pgnlib/example_3/: Makefile  example_3.cpp  miniatures.pgn
pgnlib/example_4/: Makefile  example_4.cpp  games.pgn  my2-0.pgn  my2-12.pgn  others.pgn
pgnlib/example_5/: Makefile  example_5.cpp  example_5.kdev4  games.pgn
pgnlib/example_5/.kdev4/: example_5.kdev4
pgnlib/example_6/: Makefile  example_6.cpp  example_6.kdev4
pgnlib/example_6/.kdev4/: example_6.kdev4
pgnlib/example_7/: Makefile  example_7.cpp  example_7.kdev4
src/: PGNGame.cpp  PGNGame.h  PGNMoveInfo.cpp  PGNMoveInfo.h  TrainingDataDedup.cpp  TrainingDataDedup.h  TrainingDataReader.cpp  TrainingDataReader.h  TrainingDataWriter.cpp  TrainingDataWriter.h  V4TrainingDataHashUtil.h  polyglot_lib.cpp  polyglot_lib.h  trainingdata-tool.cpp  trainingdata-tool.h  trainingdata.cpp  trainingdata.h
test/: 2008_SCT_LadiesOpen.pgn  output-test-test.pgn
