include_HEADERS = PGNCommentText.h \
	PGNException.h \
	PGNGameCollection.h  \
	PGNGame.h \
	PGNGameResult.h \
	PGNMove.h \
	PGNMoveList.h \
	PGNPiece.h \
	PGNPly.h \
	PGNSquare.h \
	PGNTag.h \
	PGNTagList.h \
	PGNParser.h \
	PGNPosition.h
lib_LTLIBRARIES   = libpgn.la
libpgn_la_SOURCES = PGNCommentText.cpp \
	PGNException.cpp \
	PGNGameCollection.cpp \
	PGNGame.cpp \
	PGNGameResult.cpp \
	PGNMove.cpp \
	PGNMoveList.cpp \
	PGNPiece.cpp \
	PGNPly.cpp \
	PGNSquare.cpp \
	PGNTag.cpp \
	PGNTagList.cpp \
	PGNParser.cpp \
	PGNPosition.cpp
EXTRA_DIST = example_1/example_1.cpp \
	example_1/sample.pgn \
	example_1/Makefile \
	example_2/example_2.cpp \
	example_2/sample.pgn \
	example_2/Makefile \
	example_3/example_3.cpp \
	example_3/games.pgn \
	example_3/Makefile \
	example_4/example_4.cpp \
	example_4/games.pgn \
	example_4/Makefile \
	example_5/example_5.cpp \
	example_5/games.pgn \
	example_5/Makefile \
	example_6/example_6.cpp \
	example_6/games.pgn \
	example_6/Makefile \
	example_7/example_7.cpp \
	example_7/Makefile 
ACLOCAL_AMFLAGS = -I m4
